# Movie_Recommended_System

./: README.md  app.py  pyproject.toml  requirements.txt
data/: .gitignore  movies_metadata.csv.dvc
notebook/: movies.ipynb  tfidf.pkl
